// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Button States 1`] = `
<section>
  

  <button
    class="fd-button fd-button--emphasized"
  >
    Normal State
  </button>
  

  <button
    aria-selected="true"
    class="fd-button fd-button--emphasized is-selected"
  >
    Selected State
  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--emphasized"
    disabled=""
  >
    Disabled State
  </button>
  

  <button
    aria-describedby="fd-ONXuqucVcF1"
    aria-disabled="true"
    class="fd-button fd-button--emphasized is-disabled"
    type="button"
  >
    Disabled Focusable
  </button>
  

  <p
    aria-live="assertive"
    class="fd-button__instructions"
    id="fd-ONXuqucVcF1"
  >
    This disabled button is focusable and this text will be read out by a screen reader and read again when there are changes to the state of the button.
  </p>
  

  <br />
  <br />
  

  <button
    class="fd-button"
  >
    Normal State
  </button>
  

  <button
    aria-selected="true"
    class="fd-button is-selected"
  >
    Selected State
  </button>
  

  <button
    aria-disabled="true"
    class="fd-button is-disabled"
    disabled=""
  >
    Disabled State
  </button>
  

  <button
    aria-describedby="fd-ONXuqucVcF2"
    aria-disabled="true"
    class="fd-button is-disabled"
    type="button"
  >
    Disabled Focusable
  </button>
  

  <p
    aria-live="assertive"
    class="fd-button__instructions"
    id="fd-ONXuqucVcF2"
  >
    This disabled button is focusable and this text will be read out by a screen reader and read again when there are changes to the state of the button.
  </p>
  

  <br />
  <br />
  

  <button
    class="fd-button fd-button--transparent"
  >
    Normal State
  </button>
  

  <button
    aria-selected="true"
    class="fd-button fd-button--transparent is-selected"
  >
    Selected State
  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--transparent is-disabled"
    disabled=""
  >
    Disabled State
  </button>
  

  <button
    aria-describedby="fd-ONXuqucVcF3"
    aria-disabled="true"
    class="fd-button fd-button--transparent is-disabled"
    type="button"
  >
    Disabled Focusable
  </button>
  

  <p
    aria-live="assertive"
    class="fd-button__instructions"
    id="fd-ONXuqucVcF3"
  >
    This disabled button is focusable and this text will be read out by a screen reader and read again when there are changes to the state of the button.
  </p>
  

  <br />
  <br />
  

  <button
    class="fd-button fd-button"
  >
    Normal State
  </button>
  

  <button
    aria-selected="true"
    class="fd-button fd-button is-selected"
  >
    Selected State
  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button"
    disabled=""
  >
    Disabled State
  </button>
  

  <button
    aria-describedby="fd-ONXuqucVcF4"
    aria-disabled="true"
    class="fd-button fd-button is-disabled"
    type="button"
  >
    Disabled Focusable
  </button>
  

  <p
    aria-live="assertive"
    class="fd-button__instructions"
    id="fd-ONXuqucVcF4"
  >
    This disabled button is focusable and this text will be read out by a screen reader and read again when there are changes to the state of the button.
  </p>
  

  <br />
  <br />
  

  <button
    class="fd-button fd-button--ghost"
  >
    Normal State
  </button>
  

  <button
    aria-selected="true"
    class="fd-button fd-button--ghost is-selected"
  >
    Selected State
  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--ghost"
    disabled=""
  >
    Disabled State
  </button>
  

  <button
    aria-describedby="fd-ONXuqucVcF5"
    aria-disabled="true"
    class="fd-button fd-button--ghost is-disabled"
    type="button"
  >
    Disabled Focusable
  </button>
  

  <p
    aria-live="assertive"
    class="fd-button__instructions"
    id="fd-ONXuqucVcF5"
  >
    This disabled button is focusable and this text will be read out by a screen reader and read again when there are changes to the state of the button.
  </p>
  

  <br />
  <br />
  

  <button
    class="fd-button fd-button--positive"
  >
    Normal State
  </button>
  

  <button
    aria-selected="true"
    class="fd-button fd-button--positive is-selected"
  >
    Selected State
  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--positive"
    disabled=""
  >
    Disabled State
  </button>
  

  <button
    aria-describedby="fd-ONXuqucVcF6"
    aria-disabled="true"
    class="fd-button fd-button--positive is-disabled"
    type="button"
  >
    Disabled Focusable
  </button>
  

  <p
    aria-live="assertive"
    class="fd-button__instructions"
    id="fd-ONXuqucVcF6"
  >
    This disabled button is focusable and this text will be read out by a screen reader and read again when there are changes to the state of the button.
  </p>
  

  <br />
  <br />
  

  <button
    class="fd-button fd-button--negative"
  >
    Normal State
  </button>
  

  <button
    aria-selected="true"
    class="fd-button fd-button--negative is-selected"
  >
    Selected State
  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--negative"
    disabled=""
  >
    Disabled State
  </button>
  

  <button
    aria-describedby="fd-ONXuqucVcF7"
    aria-disabled="true"
    class="fd-button fd-button--negative is-disabled"
    type="button"
  >
    Disabled Focusable
  </button>
  

  <p
    aria-live="assertive"
    class="fd-button__instructions"
    id="fd-ONXuqucVcF7"
  >
    This disabled button is focusable and this text will be read out by a screen reader and read again when there are changes to the state of the button.
  </p>
  

  <br />
  <br />
  

  <button
    class="fd-button fd-button--attention"
  >
    Normal State
  </button>
  

  <button
    aria-selected="true"
    class="fd-button fd-button--attention is-selected"
  >
    Selected State
  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--attention is-disabled"
    disabled=""
  >
    Disabled State
  </button>
  

  <button
    aria-describedby="fd-ONXuqucVcF8"
    aria-disabled="true"
    class="fd-button fd-button--attention is-disabled"
    type="button"
  >
    Disabled Focusable
  </button>
  

  <p
    aria-live="assertive"
    class="fd-button__instructions"
    id="fd-ONXuqucVcF8"
  >
    This disabled button is focusable and this text will be read out by a screen reader and read again when there are changes to the state of the button.
  </p>
  

</section>
`;

exports[`Storyshots Components/Button Design Types 1`] = `

    
`;

exports[`Storyshots Components/Button Focusable Disabled 1`] = `
<section>
  

  <button
    aria-describedby="fd-ONXuqucVcF"
    aria-disabled="true"
    class="fd-button is-disabled"
    type="button"
  >
    Disabled Focusable
  </button>
  

  <p
    aria-live="assertive"
    class="fd-button__instructions"
    id="fd-ONXuqucVcF"
  >
    This disabled button is focusable and this text will be read out by a screen reader and read again when there are changes to the state of the button.
  </p>
  

</section>
`;

exports[`Storyshots Components/Button Icon and Text 1`] = `
<section>
  

  <button
    class="fd-button fd-button--emphasized"
  >
    Add to Cart
  </button>
  

  <button
    class="fd-button"
  >
    Add to Cart
  </button>
  

  <button
    class="fd-button fd-button--transparent"
  >
    Add to Cart
  </button>
  

  <button
    class="fd-button fd-button--ghost"
  >
    Add to Cart
  </button>
  

  <button
    class="fd-button fd-button--positive"
  >
    Approve
  </button>
  

  <button
    class="fd-button fd-button--negative"
  >
    Reject
  </button>
  

  <button
    class="fd-button fd-button--attention"
  >
    Attention
  </button>
  

  <br />
  <br />
  

  <button
    class="fd-button"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--emphasized"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--transparent"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--ghost"
  >
    <i
      class="sap-icon--filter fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--positive"
  >
    <i
      class="sap-icon--accept fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--negative"
  >
    <i
      class="sap-icon--decline fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--attention"
  >
    <i
      class="sap-icon--decline fd-button__icon-left"
    />
  </button>
  

</section>
`;

exports[`Storyshots Components/Button Menu Button 1`] = `
<section>
  

  <button
    class="fd-button fd-button--menu"
  >
    Action Button
  </button>
  

  <button
    class="fd-button fd-button--ghost fd-button--menu"
  >
    
    Ghost Button
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--positive fd-button--menu"
  >
    
    Positive Button
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--negative fd-button--menu"
  >
    
    Negative Button
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--attention fd-button--menu"
  >
    
    Attention Button
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <br />
  <br />
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--menu"
    disabled=""
  >
    
    Action Button
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--ghost fd-button--menu"
    disabled=""
  >
    
    Ghost Button
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--positive fd-button--menu"
    disabled=""
  >
    
    Positive Button
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--negative fd-button--menu"
    disabled=""
  >
    
    Negative Button
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    aria-disabled="true"
    class="fd-button fd-button--attention fd-button--menu"
    disabled=""
  >
    
    Attention Button
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <br />
  <br />
  

  <button
    class="fd-button fd-button--emphasized fd-button--menu"
  >
    
    Add to Cart
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--menu"
  >
    
    Add to Cart
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--transparent fd-button--menu"
  >
    
    Add to Cart
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--emphasized fd-button--menu fd-button--positive"
  >
    
    Approve
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--negative fd-button--menu"
  >
    
    Reject
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--attention fd-button--menu"
  >
    
    Attention
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <br />
  <br />
  

  <button
    class="fd-button fd-button--menu"
  >
    
    
    <i
      class="sap-icon--cart"
    />
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--menu fd-button--transparent"
  >
    
    
    <i
      class="sap-icon--cart"
    />
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--menu fd-button--positive"
  >
    
    
    <i
      class="sap-icon--cart"
    />
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--menu fd-button--negative"
  >
    
    
    <i
      class="sap-icon--cart"
    />
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--menu fd-button--attention"
  >
    
    
    <i
      class="sap-icon--cart"
    />
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <br />
  <br />
  

  <button
    class="fd-button fd-button--menu"
  >
    
    Default
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

  <button
    class="fd-button fd-button--compact fd-button--menu"
  >
    
    Compact
    <i
      class="sap-icon--slim-arrow-down fd-button__icon--right"
    />
    

  </button>
  

</section>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<section>
  
    
  <button
    class="fd-button"
  >
    Create
  </button>
  
    
  <button
    class="fd-button"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  
    
  <button
    class="fd-button fd-button--emphasized "
  >
    Save
  </button>
  

</section>
`;

exports[`Storyshots Components/Button Rtl 1`] = `


`;

exports[`Storyshots Components/Button Segmented Button (previously known as Button Group) 1`] = `
<section>
  
    
  <div
    aria-label="Group label"
    class="fd-segmented-button"
    role="group"
  >
    
        
    <button
      class="fd-button"
    >
      <i
        class="sap-icon--survey fd-button__icon-left"
      />
    </button>
    
        
    <button
      aria-pressed="true"
      class="fd-button is-selected"
    >
      <i
        class="sap-icon--pie-chart fd-button__icon-left"
      />
    </button>
    
        
    <button
      class="fd-button"
    >
      <i
        class="sap-icon--pool fd-button__icon-left"
      />
    </button>
    
    
  </div>
  

    
  <div
    aria-label="Group label"
    class="fd-segmented-button"
    role="group"
  >
    
        
    <button
      aria-pressed="true"
      class="fd-button fd-button--compact is-selected"
    >
      Left
    </button>
    
        
    <button
      class="fd-button fd-button--compact"
    >
      Middle
    </button>
    
        
    <button
      class="fd-button fd-button--compact"
    >
      Right
    </button>
    
    
  </div>
  

</section>
`;

exports[`Storyshots Components/Button Sizes 1`] = `
<section>
  

  <button
    class="fd-button"
  >
    Save
  </button>
  

  <button
    class="fd-button"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--ghost"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--emphasized"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--transparent"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--positive"
  >
    Approve
  </button>
  

  <button
    class="fd-button fd-button--negative"
  >
    Reject
  </button>
  

  <button
    class="fd-button fd-button--attention"
  >
    Attention
  </button>
  

  <br />
  <br />
  

  <button
    class="fd-button fd-button--compact"
  >
    Edit
  </button>
  

  <button
    class="fd-button fd-button--compact"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--ghost fd-button--compact"
  >
    Edit
  </button>
  

  <button
    class="fd-button fd-button--emphasized fd-button--compact"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--transparent fd-button--compact"
  >
    <i
      class="sap-icon--cart fd-button__icon-left"
    />
  </button>
  

  <button
    class="fd-button fd-button--positive fd-button--compact "
  >
    Approve
  </button>
  

  <button
    class="fd-button fd-button--negative fd-button--compact"
  >
    Reject
  </button>
  

  <button
    class="fd-button fd-button--attention fd-button--compact"
  >
    Attention
  </button>
  

</section>
`;

exports[`Storyshots Components/Button Split Menu Button 1`] = `
<section>
  

  <div
    aria-label="button-split"
    class="fd-button-split fd-has-margin-right-small"
    role="group"
  >
    
  
    <button
      aria-label="button"
      class="fd-button"
    >
      Button with text
    </button>
    
  
    <button
      aria-controls="t4c0o273"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="More"
      class="fd-button"
    >
      <i
        class="sap-icon--slim-arrow-down fd-button__icon-right"
      />
    </button>
    
  
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--right"
      id="t4c0o273"
    >
      
    
      <nav
        class="fd-menu"
      >
        
        
        <ul
          class="fd-menu__list fd-menu__list--no-shadow"
        >
          
          
          <li
            class="fd-menu__item"
          >
            
              
            <a
              class="fd-menu__link"
              href="#"
              role="button"
            >
              
                  
              <span
                class="fd-menu__title"
              >
                Add to list
              </span>
              
              
            </a>
            
          
          </li>
          
          
          <li
            class="fd-menu__item"
          >
            
              
            <a
              class="fd-menu__link"
              href="#"
              role="button"
            >
              
                  
              <span
                class="fd-menu__title"
              >
                Save for later
              </span>
              
              
            </a>
            
          
          </li>
          
        
        </ul>
        
    
      </nav>
      
  
    </div>
    

  </div>
  


  <div
    aria-label="button-split"
    class="fd-button-split"
    role="group"
  >
    
  
    <button
      aria-label="button"
      class="fd-button fd-button--emphasized"
    >
      Button with text
    </button>
    
  
    <button
      aria-controls="t4c0o2732"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="More"
      class="fd-button fd-button--emphasized"
    >
      <i
        class="sap-icon--slim-arrow-down fd-button__icon-right"
      />
    </button>
    

  
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--right"
      id="t4c0o2732"
    >
      
    
      <nav
        class="fd-menu"
      >
        
        
        <ul
          class="fd-menu__list fd-menu__list--no-shadow"
        >
          
          
          <li
            class="fd-menu__item"
          >
            
              
            <a
              class="fd-menu__link"
              href="#"
              role="button"
            >
              
                  
              <span
                class="fd-menu__title"
              >
                Add to list
              </span>
              
              
            </a>
            
          
          </li>
          
          
          <li
            class="fd-menu__item"
          >
            
              
            <a
              class="fd-menu__link"
              href="#"
              role="button"
            >
              
                  
              <span
                class="fd-menu__title"
              >
                Save for later
              </span>
              
              
            </a>
            
          
          </li>
          
        
        </ul>
        
    
      </nav>
      
  
    </div>
    

  </div>
  


  <div
    aria-label="button-split"
    class="fd-button-split"
    role="group"
  >
    
  
    <button
      aria-label="button"
      class="fd-button fd-button--transparent"
    >
      Button with text
    </button>
    
  
    <button
      aria-controls="t4c0o27322"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="More"
      class="fd-button fd-button--transparent"
    >
      <i
        class="sap-icon--slim-arrow-down fd-button__icon-right"
      />
    </button>
    
  
    <div
      aria-hidden="true"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--right"
      id="t4c0o27322"
    >
      
    
      <nav
        class="fd-menu"
      >
        
        
        <ul
          class="fd-menu__list fd-menu__list--no-shadow"
        >
          
          
          <li
            class="fd-menu__item"
          >
            
              
            <a
              class="fd-menu__link"
              href="#"
              role="button"
            >
              
                  
              <span
                class="fd-menu__title"
              >
                Add to list
              </span>
              
              
            </a>
            
          
          </li>
          
          
          <li
            class="fd-menu__item"
          >
            
              
            <a
              class="fd-menu__link"
              href="#"
              role="button"
            >
              
                  
              <span
                class="fd-menu__title"
              >
                Save for later
              </span>
              
              
            </a>
            
          
          </li>
          
        
        </ul>
        
    
      </nav>
      
  
    </div>
    

  </div>
  


</section>
`;
